Changelog
=========

3.6.8 (unreleased)
------------------

- Changed the way external plugins are registered. It's better to use the three
  parameter variant of ``CKEDITOR.plugins.addExternal`` because this will make
  the base URL for the plugin resources available within the plugin code as
  ``this.path`` correctly. Otherwise ``this.path`` contains the full URL to the
  plugin script itself which consequently breaks loading of related resources
  (images, translations, etc).
  [dokai]

- Refactored the ``ck_ruid_to_url`` transform to use plone.app.uuid to transform
  UIDs to URLs. This avoids using reference_catalog in favor of portal_catalog
  and appears to fix issues with Dexterity types not available through the
  reference_catalog.
  [dokai]

- Limited string length to be searched under 3000 characters by re.search method.
  [taito]

3.6.7 (2012-08-20)
------------------

- take care of external stylesheets registered with an absolute URL.
  [gotcha]

- fix plugins (add migration)
  [kiorky]

- refresh translations
  [kiorky]

- translate styles menu
  [kiorky]

3.6.6 (2012-07-05)
------------------

- Fix default value for images
  [kai.hoppert@tomcom.de]

- Add a duplicate directory for ckeditor sources: it needs a more ambitious
  patch but fix a development installation
  [kiorky]

3.6.5 (2012-07-04)
------------------

- Fix missing directory in 3.6.4 release
  [encolpe]

3.6.4 (2012-07-03)
------------------

- Fix missing include for rst files in the manifest
  [encolpe]

- Version the latest known working ckeditor commited in browser/ckeditor
  [kiorky]

3.6.3 (2012-07-03)
------------------

- Don't show ckeditor if html is not in the allowable content types of the field.
  This fixes integration with Products.Poi where the details field of a
  PoiIssue allows only text/x-web-intelligent by default.
  [vincentfretin]

- Fixed the finder to honor the "Allow folder creation" option.
  [dokai]

- Added i18n support
  [giacomos]
